add page loading progress bar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,3 +14,11 @@ body {
 * {
 	box-sizing: border-box;
 }
+
+#nprogress .bar {
+	background: black;
+}
+
+#nprogress .spinner {
+	display: none;
+}
