--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,6 +16,10 @@ html {
 	--colors-accent-bg: theme("colors.gray.200");
 	--colors-accent2-bg: theme("colors.gray.300");
 
+	/* success/error */
+	--colors-success: theme("colors.green.500");
+	--colors-error: theme("colors.red.400");
+
 	/* selection */
 	--colors-selection-bg: theme("colors.blue.100");
 	--colors-selection-text: var(--colors-normal-text);
@@ -73,6 +77,10 @@ html.dark {
 	--colors-normal-bg: #181a1b;
 	--colors-accent-bg: #25282a;
 	--colors-accent2-bg: #2f3335;
+
+	/* success/error */
+	--colors-success: theme("colors.green.400");
+	--colors-error: theme("colors.red.400");
 
 	/* selection */
 	--colors-selection-bg: theme("colors.blue.200");
