--- a/src/components/Skeleton/Skeleton.module.css
+++ b/src/components/Skeleton/Skeleton.module.css
@@ -2,8 +2,8 @@
 	--accent-1: #fafafa; /* gradient line color */
 	--accent-2: #eaeaea; /* background color */
 
-	--accent-1: var(--colors-accent-bg); /* gradient line color */
-	--accent-2: var(--colors-accent2-bg); /* background color */
+	--accent-1: var(--colors-bg-accent); /* gradient line color */
+	--accent-2: var(--colors-bg-accent2); /* background color */
 
 	background-image: linear-gradient(
 		270deg,
