--- a/src/client/index.css
+++ b/src/client/index.css
@@ -16,6 +16,27 @@
 
 	--color-border: var(--color-neutral-200);
 	--color-border-focus: var(--color-black);
+
+	--animate-toast-appear: toast-appear 0.35s cubic-bezier(0.21, 1.02, 0.73, 1) forwards running;
+	--animate-toast-dismiss: toast-dismiss 0.4s cubic-bezier(0.06, 0.71, 0.55, 1) forwards;
+
+	@keyframes toast-appear {
+		0% {
+			transform: translateY(200%) scale(0.6);
+			opacity: 0.5;
+		}
+	}
+
+	@keyframes toast-dismiss {
+		0% {
+			transform: translate3d(0, 0, -1px) scale(1);
+			opacity: 1;
+		}
+		100% {
+			transform: translate3d(0, 150%, -1px) scale(0.6);
+			opacity: 0;
+		}
+	}
 }
 
 :where(.dark) {
